@@ -1,3 +1,13 @@
+2008-04-11  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* src/murrine_draw.c: (murrine_draw_entry),
+	(murrine_scale_draw_gradient), (murrine_draw_scale_trough),
+	(murrine_draw_slider_handle), (murrine_draw_progressbar_trough):
+	* src/murrine_draw_rgba.c: (murrine_rgba_draw_entry),
+	(murrine_scale_draw_gradient), (murrine_rgba_draw_scale_trough),
+	(murrine_rgba_draw_progressbar_trough):
+	Progressbar trough updated.
+
 2008-04-10  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* src/cairo-support.c: (murrine_draw_lightborder),
